// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`backgroundImage should return a background-image style rule when a backgroundImage arg is passed 1`] = `
Array [
  "
    background-image: ",
  "url(https://placekitten.com/g/826/465)",
  ";
  ",
]
`;

exports[`backgroundImage should return a background-image style rule when backgroundImage, deg, and stops args are passed 1`] = `
Array [
  "
    background-image: ",
  "linear-gradient(256deg, rgb(0, 45, 161), rgb(2, 108, 223) 55%, rgb(0, 45, 161)), url(https://placekitten.com/g/826/465)",
  ";
  ",
]
`;

exports[`backgroundImage should return a background-image style rule when deg and stops args are passed 1`] = `
Array [
  "
    background-image: ",
  "linear-gradient(256deg, rgb(0, 45, 161), rgb(2, 108, 223) 55%, rgb(0, 45, 161))",
  ";
  ",
]
`;

exports[`backgroundImage should return no rule when only a deg arg is passed 1`] = `undefined`;

exports[`backgroundImage should return no rule when only a stops arg is passed 1`] = `undefined`;
